--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ install:
   - npm install
   - npm run build
 
-script:
-  - npm run test
+after_success:
+  - npm test && nyc report --reporter=text-lcov | coveralls
