--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/socket.io": "^1.4.36",
     "@types/socket.io-client": "^1.4.32",
     "chai": "latest",
+    "coveralls": "^3.0.3",
     "mocha": "^5.2.0",
     "mocha-typescript": "latest",
     "nyc": "^12.0.2",
