--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ install:
   - npm run build
 
 after_success:
-  - npm test --coverage --coverageReporters=build/coverage/lcov.info | coveralls
+  - npm run coveralls
